# qwtplot3d-qt5

./: CMakeLists.txt  qwtplot3d-qt5-build.patch  qwtplot3d-qt5.spec
examples/: CMakeLists.txt
examples/autoswitch/: autoswitch.cpp  autoswitch.h
examples/axes/src/: CMakeLists.txt  axesmainwindow.cpp  axesmainwindow.h  main.cpp
examples/enrichments/src/: CMakeLists.txt  enrichmentmainwindow.cpp  enrichmentmainwindow.h  main.cpp
examples/mesh2/src/: CMakeLists.txt  colormapreader.cpp  colormapreader.h  designerworkaround.h  functions.h  lightingdlg.cpp  lightingdlg.h  lightingdlgbaseimpl.cpp  main.cpp  mesh.cpp  mesh2mainwindow.cpp  mesh2mainwindow.h
examples/simpleplot/: simpleplot.cpp
include/: qwt3d_autoptr.h  qwt3d_autoscaler.h  qwt3d_axis.h  qwt3d_color.h  qwt3d_colorlegend.h  qwt3d_coordsys.h  qwt3d_drawable.h  qwt3d_enrichment.h  qwt3d_enrichment_std.h  qwt3d_function.h  qwt3d_global.h  qwt3d_graphplot.h  qwt3d_gridmapping.h  qwt3d_helper.h  qwt3d_io.h  qwt3d_io_gl2ps.h  qwt3d_io_reader.h  qwt3d_label.h  qwt3d_mapping.h  qwt3d_multiplot.h  qwt3d_openglhelper.h  qwt3d_parametricsurface.h  qwt3d_plot.h  qwt3d_portability.h  qwt3d_scale.h  qwt3d_surfaceplot.h  qwt3d_types.h  qwt3d_volumeplot.h
src/: qwt3d_autoscaler.cpp  qwt3d_axis.cpp  qwt3d_color.cpp  qwt3d_colorlegend.cpp  qwt3d_coordsys.cpp  qwt3d_dataviews.cpp  qwt3d_drawable.cpp  qwt3d_enrichment_std.cpp  qwt3d_function.cpp  qwt3d_gridmapping.cpp  qwt3d_gridplot.cpp  qwt3d_io.cpp  qwt3d_io_gl2ps.cpp  qwt3d_io_reader.cpp  qwt3d_label.cpp  qwt3d_lighting.cpp  qwt3d_meshplot.cpp  qwt3d_mousekeyboard.cpp  (+6 more)
